# ElasticFusion

./: cuong_notes.txt
Core/src/: ElasticFusion.cpp  ElasticFusion.h
Core/src/Utils/: RGBDOdometry.cpp
GPUTest/src/: CMakeLists.txt  GPUTest.cpp
GUI/src/: MainController.cpp  MainController.h
GUI/src/Tools/: RawLogReader.cpp
